# HemoStat

./: .env  .env.docker.linux  .env.docker.macos  .env.docker.windows  .env.example  .env.local  .gitignore  BUILDKIT_QUICKREF.md  Makefile  PLATFORM_SETUP.md  README.md  TEAM_SETUP_GUIDE.md  TEST.md  USAGE_GUIDE.md  VULNERABILITY_ALERT_WORKFLOW.md  VULNSCANNER_QUICKSTART.md  demo_vulnscanner.py  docker-compose.linux.yml  docker-compose.macos.yml  docker-compose.windows.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_huggingface_model.py  test_vulnerability_workflow.py  test_vulnscanner.py
.github/workflows/: docs.yml
.streamlit/: config.toml
agents/: agent_base.py  logger.py  platform_utils.py
agents/hemostat_alert/: Dockerfile  README.md  __init__.py  alert.py  hemostat_alert.py  main.py
agents/hemostat_analyzer/: Dockerfile  __init__.py  analyzer.py  hemostat_analyzer.py  main.py
agents/hemostat_metrics/: Dockerfile
agents/hemostat_monitor/: Dockerfile  README.md  __init__.py  hemostat_monitor.py  main.py  monitor.py
agents/hemostat_responder/: Dockerfile  __init__.py  hemostat_responder.py  main.py  responder.py
agents/hemostat_vulnscanner/: Dockerfile  README.md  __init__.py  hemostat_vulnscanner.py  main.py  vulnscanner.py
dashboard/: Dockerfile  README.md  __init__.py  app.py  components.py  data_fetcher.py  main.py
docs/: .buildinfo  .buildinfo.bak  API_PROTOCOL.md  ARCHITECTURE.md  BUILDKIT_GUIDE.md  BUILDKIT_SUMMARY.md  DEPLOYMENT.md  GPU_SETUP_WINDOWS.md  HUGGINGFACE_DEPLOYMENT.md  MONITORING_QUICKSTART.md  QUALITY_TOOLS_SETUP.md  QUICKSTART.md  QUICK_TEST.md  README.md  TROUBLESHOOTING.md  WARP.md  api_protocol.html  architecture.html  deployment.html  development.html  genindex.html  index.html  monitoring.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  troubleshooting.html
docs/_modules/: index.html
docs/_modules/agents/: agent_base.html  logger.html  platform_utils.html
docs/_modules/agents/hemostat_alert/: alert.html
docs/_modules/agents/hemostat_analyzer/: analyzer.html
docs/_modules/agents/hemostat_monitor/: monitor.html
docs/_modules/agents/hemostat_responder/: responder.html
docs/_modules/dashboard/: app.html  components.html
docs/_sources/: architecture.md.txt  development.md.txt  index.rst.txt  monitoring.md.txt  quickstart.md.txt  troubleshooting.md.txt
docs/api/: agents.html  dashboard.html  index.html
docs/phases/: README_PHASE1.md
docs/source/: api_protocol.md  architecture.md  conf.py  deployment.md  index.rst  quickstart.md
docs/source/api/: agents.rst  dashboard.rst  index.rst
scripts/: BUILDKIT_SETUP.md  README.md  demo_trigger_cleanup.ps1  demo_trigger_cleanup.sh  demo_trigger_cleanup.zsh  demo_trigger_cpu_spike.ps1  demo_trigger_cpu_spike.sh  demo_trigger_cpu_spike.zsh  demo_trigger_high_memory.ps1  demo_trigger_high_memory.sh  demo_trigger_high_memory.zsh  test_api.py  test_worker.py  verify_message_flow.ps1  verify_message_flow.sh  verify_message_flow.zsh
scripts/linux/: enable_buildkit.sh
scripts/macos/: enable_buildkit.zsh  verify_message_flow.zsh
scripts/windows/: demo_trigger_cpu_spike.ps1  enable_buildkit.ps1  run_local_hf_server.ps1
